# orchestra-multiagent

./: .gitignore  OVERVIEW.md  README.md  README.zh-CN.md  pyproject.toml
deploy/: .env.example  Dockerfile  docker-compose.yml
docs/superpowers/plans/: 2026-05-14-claude-config-manager.md
docs/superpowers/specs/: 2026-05-14-claude-config-manager-design.md  (+2 more)
prompts/: feature_interpreter.md  feature_realizer.md  head_leader.md  planner.md
src/orchestra/: __init__.py  fi_workspace_claude.md  main.py
src/orchestra/core/: vault.py  (+13 more)
tests/: conftest.py  test_agent_run_manager.py  test_agent_spawner_session.py  test_bootstrap.py  test_cascade_fr_failure.py  test_claude_config.py  test_claude_config_api.py  test_cli_standalone.py  test_context_manager_run_config.py  test_context_manager_spec.py  test_db_models.py  test_dev_server.py  test_fi_full_flow.py  test_fi_no_dev_server.py  test_fi_serialization.py  test_fr_resume_fallback.py  test_fr_resume_path.py  test_fr_session_capture.py  test_orchestrator_lifecycle.py  test_phase1_init.py  test_phase2_submit.py  test_phase3_proposal_review.py  test_phase4_execution.py  test_phase5_review_merge.py  test_phase6_web_api.py  test_plan_pipeline.py  test_plan_runner.py  test_proposal_paused.py  test_retry_failed_task.py  test_review_findings.py  test_review_findings_round2.py  test_run_config.py  test_run_config_detect.py  test_runners.py  test_runners_base.py  test_standalone_api.py  test_standalone_integration.py  test_standalone_mode.py  test_standalone_session.py  test_task_queue_methods.py  (+9 more)
tests/fixtures/: fake_claude.py
(+20 files in other folders)
