[project]
name = "orchestra"
version = "0.1.0"
description = "Multi-agent coworking orchestration system powered by Claude Code"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.20.0",
    "pyyaml>=6.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "cryptography>=42.0",
]

[project.optional-dependencies]
tui = ["textual>=0.50.0"]

[project.scripts]
orchestra = "orchestra.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
